hdone/objects/Category__mdt.object
<CustomObject>
    <description>Categories for questions, responses and reporting.</description>
    <fields>
        <fullName>AuditSettingInstruction__c</fullName>
        <description>Specific instructions for scenario</description>
        <inlineHelpText>Specific instructions for scenario</inlineHelpText>
        <label>AuditSettingInstruction</label>
        <referenceTo>AuditSettingInstruction__mdt</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level of category. Primary indicates used for AuditSettings. Secondary are generally used for Confirmation Data</description>
        <inlineHelpText>Level of category</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Category Type</description>
        <inlineHelpText>Category Type</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Category</label>
    <pluralLabel>Categories</pluralLabel>
</CustomObject>